[gd_scene load_steps=5 format=3 uid="uid://b2tu0r5oy2hba"]

[ext_resource type="StyleBox" uid="uid://dwxqhhtunho3f" path="res://ui/resources/dialog_styles.tres" id="1_4w2oo"]
[ext_resource type="Script" uid="uid://8xx4tjv8uu7j" path="res://ui/views/game-menu-view/game_menu_view.gd" id="1_rry45"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rry45"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_4w2oo"]
font_size = 20

[node name="GameMenuView" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rry45")
script = ExtResource("1_rry45")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_4w2oo")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="MainContainer" type="BoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25
vertical = true

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
text = "Game menu"
label_settings = SubResource("LabelSettings_4w2oo")
horizontal_alignment = 1

[node name="ButtonsContainer" type="BoxContainer" parent="PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 10
vertical = true

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Main menu
"

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/MainContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Exit
"
